# bridging-annotation

./: .dockerignore  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  config.example.yml  pyproject.toml
backend/app/: config.py  main.py
backend/scripts/: candidate_noun_stat.py  gen_job.py  gen_questions.py  gen_tsv.py  json_encoder.py  test_gen_questions.py  tutorial.mk
backend/scripts/data/: 0.json  1.json
frontend/: .eslintrc.json  Dockerfile  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Footer.jsx  JobList.jsx  Navigation.jsx  Utils.jsx  variants.scss
frontend/src/components/Description/: Description.jsx  description.module.scss
frontend/src/components/Description/data/: README.md  example1.json  example10.json  example3.json  example5.json  example6.json  example7.json  example8.json  (+1 more)
frontend/src/components/Example/: Example.jsx
frontend/src/components/Predict/: Predict.jsx
frontend/src/components/Question/: NAButton.jsx  PhraseButton.jsx  QuestionCard.jsx  SpecialPhraseButton.jsx  TargetPhrase.jsx  question.module.scss
frontend/src/components/QuestionView/: NAButton.jsx  PhraseButton.jsx  QuestionCard.jsx  SpecialPhraseButton.jsx  questionview.module.scss
frontend/src/components/Result/: Result.jsx
frontend/src/components/Task/: Question.jsx  Submit.jsx  Task.jsx
frontend/src/components/Tutorial/: Question.jsx  Tutorial.jsx
frontend/src/components/View/: TransitionButton.jsx  View.jsx
lib/: pyproject.toml
lib/bridging_crowd_lib/: answer.py  question.py
(+2 files in other folders)
