[tool.poetry]
name = "bridging-crowd-lib"
version = "0.1.6"
description = "Shared library for bridging-crowd"
authors = ["nobu-g <ueda-n127@hotmail.co.jp>"]

packages = [
    { include = "bridging_crowd_lib" }
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3"
dataclasses-json = "^0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
